Use autoboxing when converting Integer, Double to Java